fix text align

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,7 @@ ul {
     line-height: 1.2;
     color: #2E2F42;
     letter-spacing: 0.02em;
+    text-align: left;
 }
 
 .features-list-item-text {
@@ -146,6 +147,7 @@ ul {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    text-align: left;
 }
 /* #endregion about section */
 
